06-kubernetes-II/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cad
spec:
  selector:
    app: ctrl-alt-deploy # Ensure this matches the labels of your deployment's pods
  ports:
    - protocol: TCP
      port: 80 # The port your application is serving traffic on
      targetPort: 5000 # The target port on your pods
